# trivial-fuzzer

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  test.c
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: fuzzer.rs  json_monitor.rs  lib.rs  main.rs
test_binaries/: build.sh  test.aarch64-linux-musl  test.arm-linux-musleabi  test.c  test.x86_64-linux-musl
