[package]
name = "trivial-fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.4.18", features = ["derive", "string"] }
env_logger = "0.11.3"
libafl = { path = "./LibAFL/libafl" }
libafl_bolts = { path = "./LibAFL/libafl_bolts" }
libafl_qemu = { path = "./LibAFL/libafl_qemu" }
libc = "0.2.153"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tempfile = "3.10.1"

[[bin]]
name = "trivial-fuzzer-aarch64"
path = "src/main.rs"
required-features = ["libafl_qemu/aarch64"]

[[bin]]
name = "trivial-fuzzer-armeb"
path = "src/main.rs"
required-features = ["libafl_qemu/arm", "libafl_qemu/be"]

[[bin]]
name = "trivial-fuzzer-arm"
path = "src/main.rs"
required-features = ["libafl_qemu/arm"]

[[bin]]
name = "trivial-fuzzer-i386"
path = "src/main.rs"
required-features = ["libafl_qemu/i386"]

[[bin]]
name = "trivial-fuzzer-mips"
path = "src/main.rs"
required-features = ["libafl_qemu/mips", "libafl_qemu/be"]

[[bin]]
name = "trivial-fuzzer-mipsel"
path = "src/main.rs"
required-features = ["libafl_qemu/mips"]

[[bin]]
name = "trivial-fuzzer-ppc"
path = "src/main.rs"
required-features = ["libafl_qemu/ppc"]

[[bin]]
name = "trivial-fuzzer-x86_64"
path = "src/main.rs"
required-features = ["libafl_qemu/x86_64"]


[profile.release]
strip = true
